kubernetes/prod/01-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-front
spec:
  replicas: 5
  selector:
    matchLabels:
      app: todo-app-front
  template:
    metadata:
      labels:
        app: todo-app-front
    spec:
      containers:
        - name: todo-backend
          image: alexisc73/todo-app-front:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
