kubernetes/prod/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-front
spec:
  rules:
  - host: "todo.alexis-comte.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-front
            port:
              number: 80
